--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav {
     flex-wrap: wrap;
 }
 .noticia{
-    margin: 10 px;
+    margin: 20 px;
     text-align: center;
     background-color:rgb(0, 0, 0);
     border: 5px solid rgb(255, 255, 255);
@@ -36,6 +36,7 @@ nav {
     
 }
 footer {
+    margin-top: 10px;
     padding: 10px;
     text-align: center;
 
