--- a/style.css
+++ b/style.css
@@ -37,19 +37,27 @@ nav {
 }
 #titulo{
     text-align: center;
-    
+    justify-content: space-around;
+    display: flex;
+    background-color: rgb(0, 0, 0);
+    margin: 10px;
+    color: crimson;
+    border-radius: 25px;
 }
 .jogador{
     border-left: 25px;
-    color: rgb(255, 255, 255);
+    color: crimson;
     background-color: black;
 
 }
 #icon_jogador{
-    width: 150px;
+    width: 70px;
     border: 5px solid crimson;
-    margin: 10px;
+    margin: 5px;
     border-radius: 5px;
+    text-align: center;
+    justify-content: space-around;
+    display: flex;
     
     
 }
@@ -57,7 +65,8 @@ nav {
     display: flex;
     text-align: center;
     justify-content: space-around;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
 }
 
 footer {
