--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 
 body {
     margin: 0%;
-    background-color: rgb(221, 42, 42);
+    background-image: url(assets/torcida_sao_paulo.webp) ;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 nav {
@@ -68,9 +70,20 @@ nav {
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
 }
+#gif {
+    width: 200px;
+    position: fixed;
+    right: 0px;
+    bottom: 0px;
+}
+#gif_luciano{
+    right: 0px;
+    bottom: 50px;
+    height: 300px;
+}
 
 footer {
-    margin-top: 10px;
+    
     padding: 10px;
     text-align: center;
     
